z-index bug fixed

--- a/web/room.css
+++ b/web/room.css
@@ -114,7 +114,7 @@ span.room_titin {
     position: relative;
     left: 6px;
     top: 6px;
-    z-index: 100;
+    z-index: 20;
     background-color: white; 
 }
 
@@ -308,7 +308,7 @@ div.esco {
     text-align: right; 	
     top:  2px;
     right: 4px;
-    z-index: 10;
+    z-index: 20;
 }
 
 .chatt {
@@ -351,7 +351,7 @@ div.esco {
     position: absolute;
     background-color: white;
     left: 80px;
-    z-index: 20;
+    z-index: 50;
     visibility: hidden;
     border: 1px solid gray;
     text-align: left;
